crates/nash-can/src/snapshots/nash_can__module__tests__not_found_binop.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nx = (+)\n"
---
[
    NotFoundBinop {
        region: Region {
            start: Position {
                line: 3,
                column: 5,
            },
            end: Position {
                line: 3,
                column: 8,
            },
        },
        name: "+",
        available: [],
    },
]
