crates/nash-can/src/snapshots/nash_can__module__tests__not_found_var.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf = nonexistent\n"
---
[
    NotFoundVar {
        region: Region {
            start: Position {
                line: 3,
                column: 5,
            },
            end: Position {
                line: 3,
                column: 16,
            },
        },
        prefix: None,
        name: "nonexistent",
        suggestions: PossibleNames {
            locals: [
                "f",
            ],
            qualified: [],
        },
    },
]
